# Ramanujan-Magic-Square

./: CMakeLists.txt  README.md
include/: Ramanujan-Magic-Square.h  Ramanujan-Magic-Square.hpp
python/: Ramanujan-Magic-Square.py
src/: Ramanujan-Magic-Square.cpp
test/: MagicSquare_Test.cpp
